AI integration